# pc-games-ecommerce-dashboard

./: .gitignore  CHANGELOG.md  pyproject.toml  scrapy.cfg
src/: main.py
src/etl/dashboard/: extract.py  transform.py  utils.py
src/etl/web_scrapping/: middlewares.py  pipelines.py  settings.py
src/etl/web_scrapping/spiders/: nuuvem.py
src/scrapper/: items.py  pipelines.py  settings.py
src/scrapper/spiders/: nuuvem.py
